--- a/Java1/Wk1/Java1Wk1/AndroidManifest.xml
+++ b/Java1/Wk1/Java1Wk1/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.java1wk1.MainActivity"
+            android:name="com.mkelsey.java1wk1.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
